fix: align operators to center

--- a/src/components/TaxDetails/TaxSummaryCard/taxSummaryCard.scss
+++ b/src/components/TaxDetails/TaxSummaryCard/taxSummaryCard.scss
@@ -53,8 +53,7 @@
   }
 
   &__Operator {
-    align-self: flex-start;
-    padding-block-start: var(--spacing-2xs);
+    align-self: center;
   }
 
   &--mobile {
